# toy-md

./: .gitignore  .gitmodules  CMakeLists.txt  Lennard Jones.ipynb  Plot particles.ipynb
.ipynb_checkpoints/: Lennard Jones-checkpoint.ipynb  Plot particles-checkpoint.ipynb
include/: integrate.hpp  interaction.hpp  params.hpp  particle.hpp
src/: CMakeLists.txt  integrate.cpp  main.cpp  particle.cpp
test/: CMakeLists.txt  snake_eyes_bounce.csv  snake_eyes_stick.csv  test_Lennard_Jones.cpp
